# stock-ml-predictor

./: .dockerignore  .gitignore  Dockerfile  LICENSE  PROJECT_SUMMARY.md  README.md  config.yaml  pyproject.toml  requirements-light.txt  requirements.txt  run_demo.py  test_all_features.py
src/api/: app.py  endpoints.py
src/data/: fetch_data.py  preprocess.py
src/models/: evaluate.py  generate_report.py  predict.py  train.py
src/utils/: config.py  logger.py
tests/: test_api.py  test_data_fetcher.py  test_preprocess.py
